添加 organs#intro 简介字段
fix: 组织简介无法保存

--- a/config/locales/zh.attributes.yml
+++ b/config/locales/zh.attributes.yml
@@ -49,7 +49,7 @@ zh:
         job_title_id: 职级
       organ:
         name: 名称
-        name_short: 简称
+        intro: 简介
         area_id: 地区
         address: 地址
         timezone: 时区
